--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,18 @@
 {
     "manifest_version": 3,
     "name": "PerplexSearch",
-    "version": "1.0",
+    "version": "1.0.0",
     "description": "Search selected text directly in Perplexity",
     "permissions": [
-        "contextMenus"
+      "contextMenus",
+      "tabs"
     ],
     "background": {
-        "service_worker": "background.js"
+      "service_worker": "background.js"
     },
     "icons": {
-        "128": "icon.png"
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
     }
 }
